--- a/index.html
+++ b/index.html
@@ -127,28 +127,28 @@
           <h2>Herramientas</h2>
           <div class="language-icons">
             <div class="language-icon">
-              <img src="Portfolio/Fotos/Unified Modelling Language (UML).png" alt="UML">
+              <img src="Fotos/Unified Modelling Language (UML).png" alt="UML">
             </div>
             <div class="language-icon">
-              <img src="Portfolio/Fotos/pngwing.com.png" alt="Excel">
+              <img src="Fotos/pngwing.com.png" alt="Excel">
             </div>
             <div class="language-icon">
-              <img src="Portfolio/Fotos/icons8-power-bi-2021-96.png" alt="PowerBI">
+              <img src="Fotos/icons8-power-bi-2021-96.png" alt="PowerBI">
             </div>
             <div class="language-icon">
-              <img src="Portfolio/Fotos/Eclipse IDE.png" alt="EclipseIDE">
+              <img src="Fotos/Eclipse IDE.png" alt="EclipseIDE">
             </div>
             <div class="language-icon">
-              <img src="Portfolio/Fotos/Visual Studio.png" alt="Visual Studio">
+              <img src="Fotos/Visual Studio.png" alt="Visual Studio">
             </div>
             <div class="language-icon">
-              <img src="Portfolio/Fotos/Visual Studio Code (VS Code).png" alt="Visual Studio Code">
+              <img src="Fotos/Visual Studio Code (VS Code).png" alt="Visual Studio Code">
             </div>
             <div class="language-icon">
-              <img src="Portfolio/Fotos/GitHub.png" alt="GitHub">
+              <img src="Fotos/GitHub.png" alt="GitHub">
             </div>
             <div class="language-icon">
-              <img src="Portfolio/Fotos/Git.png" alt="Git">
+              <img src="Fotos/Git.png" alt="Git">
             </div>
             <div class="language-icon">
               <img src="https://raw.githubusercontent.com/devicons/devicon/6910f0503efdd315c8f9b858234310c06e04d9c0/icons/trello/trello-original.svg" alt="Trello">
@@ -163,8 +163,8 @@
 
       </div>
     </div>
-    <script src="Portfolio/js/script.js"></script>
-    <script src="Portfolio/js/particles.min.js"></script>
-    <script src="Portfolio/js/app.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/particles.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
