--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
           <div class="profile-image">
             <img src="https://i.ibb.co/PVDCXLp/Yo.jpg" alt="Tobias Lattanzi">
-            <a href="Portfolio/Archivos/TobiasLattanzi.pdf" download="Tobias_Lattanzi_CV" class="btn-download">Descargar Currículum</a>
+            <a href="Archivos/TobiasLattanzi.pdf" download="Tobias_Lattanzi_CV" class="btn-download">Descargar Currículum</a>
           </div>
         </div>
         <h2 class="aprendizaje">Mi aprendizaje</h2>
