Cambios en el front

--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
         <div class="languages-section">
           <h2>Lenguajes de programación</h2>
           <div class="language-icons">
-            <div class="language-icon">
+            <div class="language-icon" title="Java">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="C#">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="C#">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="JavaScript">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="SQL Server">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/microsoftsqlserver/microsoftsqlserver-plain.svg" alt="SQL Server">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="CSS3">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="HTML5">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" alt="HTML5">
             </div>
           </div>
@@ -114,13 +114,13 @@
         <div class="languages-section">
           <h2>Tecnologías</h2>
           <div class="language-icons">
-            <div class="language-icon">
+            <div class="language-icon" title=".NET">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-original-wordmark.svg" alt=".NET">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="Bootstrap">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" alt="Bootstrap">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="Firebase">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" alt="Firebase">
             </div>
           </div>
@@ -129,31 +129,31 @@
         <div class="languages-section">
           <h2>Herramientas</h2>
           <div class="language-icons">
-            <div class="language-icon">
+            <div class="language-icon" title="UML">
               <img src="Fotos/Unified Modelling Language (UML).png" alt="UML">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="Excel">
               <img src="Fotos/pngwing.com.png" alt="Excel">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="Power BI">
               <img src="Fotos/icons8-power-bi-2021-96.png" alt="PowerBI">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="Eclipse IDE">
               <img src="Fotos/Eclipse IDE.png" alt="EclipseIDE">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="Visual Studio">
               <img src="Fotos/Visual Studio.png" alt="Visual Studio">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="Visual Studio Code">
               <img src="Fotos/Visual Studio Code (VS Code).png" alt="Visual Studio Code">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="GitHub">
               <img src="Fotos/GitHub.png" alt="GitHub">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="Git">
               <img src="Fotos/Git.png" alt="Git">
             </div>
-            <div class="language-icon">
+            <div class="language-icon" title="Trello">
               <img src="https://raw.githubusercontent.com/devicons/devicon/6910f0503efdd315c8f9b858234310c06e04d9c0/icons/trello/trello-original.svg" alt="Trello">
             </div>
           </div>
