Añado el cv actualizado y MB Contruccion

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <div class="profile-image">
             <img src="https://i.ibb.co/PVDCXLp/Yo.jpg" alt="Tobias Lattanzi">
-            <a href="Archivos/TobiasLattanzi.pdf" download="Tobias_Lattanzi_CV" class="btn-download" data-i18n="downloadCV">Descargar Currículum</a>
+            <a href="Archivos/CVActualizado.pdf" download="Tobias_Lattanzi_CV" class="btn-download" data-i18n="downloadCV">Descargar Currículum</a>
           </div>
         </div>
         <h2 class="aprendizaje" data-i18n="learningTitle">Mi aprendizaje</h2>
@@ -112,7 +112,7 @@
                     <div class="timeline-content">
                         <div class="timeline-title" data-i18n="timeline4Title">Coder Camp</div>
                         <div class="timeline-description">
-                            <p data-i18n="timeline4Date">2025 - 2025 (Actualidad)</p>
+                            <p data-i18n="timeline4Date">2025 - 2025</p>
                             <span data-i18n="timeline4Desc">Coder House | BootCamp de Backend</span>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
               </div>
               <div class="project-info">
                 <h3>Ugartechef Store</h3>
-                <p class="project-description" data-i18n="projectDesc">Tienda online de productos de cocina profesional. E-commerce completo con catálogo de productos, carrito de compras, sistema de pedidos personalizado por WhatsApp y un panel de administrador donde pueden modificar toda la web a su antojo.</p>
+                <p class="project-description" data-i18n="projectDesc1">Tienda online de productos de cocina profesional. E-commerce completo con catálogo de productos, carrito de compras, sistema de pedidos personalizado por WhatsApp y un panel de administrador donde pueden modificar toda la web a su antojo.</p>
                 <div class="project-technologies">
                   <span class="tech-tag">HTML</span>
                   <span class="tech-tag">CSS</span>
@@ -214,6 +214,24 @@
                   <span class="tech-tag">Firebase</span>
                 </div>
                 <a href="https://ugartechef.store" target="_blank" class="project-link">
+                  <i class="fas fa-external-link-alt"></i> <span data-i18n="visitSite">Visitar sitio</span>
+                </a>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="project-image">
+                <img src="Fotos/MB sin fondo.png" alt="MB Construcción">
+              </div>
+              <div class="project-info">
+                <h3>MB Construcción</h3>
+                <p class="project-description" data-i18n="projectDesc2">Sitio web corporativo para empresa de construcción. Incluye portafolio de proyectos, información de servicios, formulario de contacto y diseño responsive completamente optimizado para dispositivos móviles.</p>
+                <div class="project-technologies">
+                  <span class="tech-tag">HTML</span>
+                  <span class="tech-tag">CSS</span>
+                  <span class="tech-tag">JavaScript</span>
+                  <span class="tech-tag">Bootstrap</span>
+                </div>
+                <a href="https://mbconstruccionarg.com" target="_blank" class="project-link">
                   <i class="fas fa-external-link-alt"></i> <span data-i18n="visitSite">Visitar sitio</span>
                 </a>
               </div>
